<resources>
    <string name="app_name">My Diary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_protect">Protect</string>
    <string name="menu_export">Share Notes as PDF</string>
    <string name="menu_reminder">Reminder</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_share">Share</string>
    <string name="app_name_version">My Diary v2.0</string>
    <string name="string_options">Options</string>
    <string name="string_view">View</string>
    <string name="string_share">Share</string>
    <string name="string_delete">Delete</string>
    <string name="attachment_an_audio_to_note">Attachment an audio to note</string>
    <string name="attach_an_image_to_the_image">Attach an image to the note</string>
    <string name="add_a_drawing_to_note">Add a drawing to note</string>
    <string name="attachment">Attachment</string>
    <string name="communicate">Communicate</string>
    <string name="note_description">Note description</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_yes">YES</string>
    <string name="string_choose_color">Choose color</string>
    <string name="string_clear_canvas">Clear Canvas</string>
    <string name="string_clear_canvas_confirm">Are you sure you want to clear the canvas?</string>
    <string name="string_brush_size">Brush Size</string>
    <string name="string_canvas">Canvas</string>
    <string name="string_ok">OK</string>
    <string name="string_edit_note">Edit Note</string>
    <string name="title_activity_image_view">Image View</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_note">Delete Note</string>
    <string name="string_delete_perm">Are you sure you want to permanently delete?</string>
    <string name="string_select_picture">Select Picture</string>
    <string name="string_edit">Edit</string>
    <string name="title_activity_note_view">ScrollingActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="string_periodically_backup_notes">Periodically backup notes</string>
    <string name="string_settings">Settings</string>
    <string name="string_set_lock_screen">Warning: Make sure you set lock screen to protect notes</string>
    <string name="string_key_creation_failed">Unable to create key</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="string_note_deleted">Note deleted</string>
    <string name="string_sing_out_success">You\'ve successfully signed out</string>
    <string name="string_failed">Failed</string>
    <string name="invitation_message">Check this new app, My Diary!: \n\nhttps://mydiaryapp.page.link/new-note</string>
    <string name="invitation_title">Invitation to My Diary</string>
    <string name="invitation_deep_link">https://mydiaryapp.page.link/new-note</string>
    <string name="export_pdf">Export as PDF</string>

    // Ad ID
    <string name="reward_ad_unit_id">ca-app-pub-9485903417823396/2531212921</string>
    <string name="note_uploading">Your notes and media are being uploaded in the background…</string>
    <string name="media_backup">Backing up media!</string>
    <string name="all_notes_backed_up">All notes and media are backed up!</string>
    <string name="some_notes_backed_up">Some media files are not uploaded!</string>
    <string name="all_notes_restored">All notes and media are restored!</string>
    <string name="some_files_not_restored">Some media files are not restored</string>
    <string name="downloading_media">Downloading media…</string>
    <string name="restored">Restored!</string>
    <string name="restoring_notes">Your notes and media are being restored in the background…</string>
    <string name="enter_note_here">Enter note here ..</string>
    <string name="note_title">Note title</string>
    <string name="a_paper_like_input_field">A paper-like input field.</string>
    <string name="an_area_to_paint_custom_objects">An area to paint custom objects.</string>
    <string name="tap_to_continue">Tap to continue.</string>
    <string name="tap_to_start">Tap to start.</string>
    <string name="no_lock_screen_info">Please setup lock screen to protect your notes.</string>
    <string name="protected_note_info">Please your notes are protected. Confirm your credentials to continue.</string>
    <string name="protection_header">Protection is active</string>
    <string name="feed">Feed</string>
    <string name="complete_form">Kindly complete the form below.</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="couldnt_generate_pdf">Sorry\, pdf generation failed.</string>
</resources>
