<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_protect"
            android:icon="@drawable/ic_lock"
            android:title="@string/menu_protect" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_archive"
            android:title="@string/menu_export" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_message"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_person"
                android:title="My Account" />
        </menu>
    </item>

</menu>
